[tool.poetry]
name = "memmod"
version = "0.0.2"
description = "A library to modify another program's memory."
authors = [ "DanielFvM <ds@xxxmail.eu>" ]
build = "build.py"
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/danielfvm/memmod"
repository = "https://github.com/danielfvm/memmod"
keywords = ["linux", "memory", "hacking-tools"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "*"
capstone = "^5.0.0"
pyelftools = "^0.28"
