[tool.poetry]
name = "libmemmod"
version = "0.0.5"
description = "A library to modify another program's memory."
authors = [ "DanielFvM <ds@xxxmail.eu>" ]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/danielfvm/memmod"
repository = "https://github.com/danielfvm/memmod"
keywords = ["linux", "memory", "hacking-tools"]
build = "build.py"
packages = [
	{ include = "memmod" }
]

[tool.poetry.urls]
"Homepage" = "https://github.com/danielfvm/memmod"
"Bug Tracker" = "https://github.com/danielfvm/memmod/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "*"
pyelftools = "^0.28"
capstone = "4.0.2"
xlib = "^0.21"

[tool.poetry.scripts]
accessanalyzer = "memmod.scripts.accessanalyzer:main"
pointerscanner = "memmod.scripts.pointerscanner:main"
loadshared = "memmod.scripts.loadshared:main"
timerhack = "memmod.scripts.timerhack:main"
