[tool.poetry]
name = "libmemmod"
version = "0.0.6"
description = "A library to modify another program's memory."
authors = [ "DanielFvM <deancode@proton.me>" ]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/danielfvm/memmod"
repository = "https://github.com/danielfvm/memmod"
keywords = ["linux", "memory", "hacking-tools"]
packages = [
	{ include = "memmod" }
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.urls]
"Homepage" = "https://github.com/danielfvm/memmod"
"Bug Tracker" = "https://github.com/danielfvm/memmod/issues"

[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"

[build-system]
requires = ["setuptools", "poetry_core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
pyelftools = "^0.28"
capstone = "4.0.2"
xlib = "^0.21"
autopep8 = "^2.0.4"

[tool.poetry.scripts]
accessanalyzer = "memmod.scripts.accessanalyzer:main"
pointerscanner = "memmod.scripts.pointerscanner:main"
loadshared = "memmod.scripts.loadshared:main"
timerhack = "memmod.scripts.timerhack:main"
